[project]
name = "httpx-issue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "fastapi[all]>=0.115.12",
    "httpx>=0.28.1",
    "niquests>=3.14.1",
]

[dependency-groups]
dev = []

[tool.ruff]
line-length = 100
lint.extend-select  = [
    "I",        # Sort imports properly
]

[tool.pyright]
typeCheckingMode = "strict"
